Fix inputs (comment z-indexes)

--- a/src/styles/pages/Login.module.scss
+++ b/src/styles/pages/Login.module.scss
@@ -5,7 +5,7 @@
     background-color: #fff;
     width: 100%;
     height: 100%;
-    z-index: -3;
+    // z-index: -3;
 }
 
 .loginContainer {
@@ -16,7 +16,7 @@
     width: 50%;
     height: 55%;
     border-radius: 1em;
-    z-index: -2;
+    // z-index: -2;
 
     .leftSide {
         width: 56%;
@@ -133,6 +133,6 @@
         background-color: #272727;
         border: none;
         border-radius: 1em;
-        z-index: -1;
+        // z-index: -1;
     }
 }
